[tool.poetry]
name = "ML-server"
version = "0.1.0"
description = ""
authors = ["sd2001 <im.swarnabha2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.11.3"
nltk = "^3.6.4"
fastapi = "^0.70.0"
dnspython = "^2.1.0"
torch = "^1.9.1"
sense2vec = "^2.0.0"
text2text = "^0.6.3"
spacy = "^3.1.3"
jupyter = "^1.0.0"
pandas = "^1.3.3"
gensim = "^4.1.2"
flashtext = "^2.7"
wordwise = "^0.0.4"
fuzzywuzzy = "^0.18.0"
aiofiles = "^0.7.0"
uuid = "^1.30"
motor = "^2.5.1"
python-dotenv = "^0.19.0"
Pillow = "^8.3.2"
pytesseract = "^0.3.8"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
